--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,16 @@ table{
   flex-direction: row;
   justify-content: space-around;
 }
-#btn{
+.btn{
+  display: flex;
+  justify-content: space-around;
+  max-height: 200px;
+}
+
+h1{
   display: flex;
   justify-content: center;
-
+  font-size: 50px
 }
+
+
