--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,10 @@ td{
   border-radius: 30px;
 }
 
+p{
+  font-size: 30px;
+}
+
 body{
   background-color: #FFCC00;
 }
@@ -31,6 +35,10 @@ h1{
   display: flex;
   justify-content: center;
   font-size: 50px
+}
+
+#coinSlot, #handle{
+  cursor: pointer;
 }
 
 
