--- a/css/main.css
+++ b/css/main.css
@@ -43,9 +43,7 @@ h1{
 }
 
 
-main{
-  display: none;
-}
+
 
 .menuB{
   background-color: #e7e7e7;
@@ -58,3 +56,8 @@ main{
   display: flex;
   justify-content: center;
 }
+
+#optMenu, #instMenu, #main{
+  display: none;
+}
+
