--- a/css/main.css
+++ b/css/main.css
@@ -1,88 +1,49 @@
-td{
-  margin: 15px 20px;
-  width: 400px;
-  height: 400px;
-  max-width: 400px;
-  border: 1.5px solid black; 
-  text-align: center;
-  font-size: 30px;
-  border-radius: 30px;
+#instMenu, #main{
+  display: none;
 }
-
-p{
-  font-size: 30px;
-}
-
-body{
-  /* background-image: url('https://goo.gl/6BsEuB'); */
-  background-color: goldenrod;
-}
-
-tr{
-  margin: 100px;
-}
-table{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-.btn{
-  display: flex;
-  justify-content: space-around;
-  max-height: 200px;
-}
-
-h1{
-  display: flex;
-  justify-content: center;
-  font-size: 50px
-}
-
 #coinSlot, #handle{
   cursor: pointer;
 }
 
 
-
-
-.menuB{
-  background-color: #e7e7e7;
-  margin: 20px;
-  height: 45px;
-
+body{
+  background-image: url("https://i.imgur.com/TaFs95Y.jpg");
+  background-size: cover;
 }
 
-#btns{
-  display: flex;
-  justify-content: center;
+h1{
+  font-family: 'Monoton', cursive;
+  color: #F2FF00;
+  text-shadow: 2px 2px #000000; 
 }
 
-#instructions{
-  align-self: flex-end;
-}
-
-#instMenu, #main{
-  display: none;
-}
-
-h2{
-  display: flex;
-  justify-content: center;
-  text-decoration: underline;
-}
-
-#para{
-  padding: 0 150px;
-  text-align: center;
-}
-
-#icons{
-  display: flex;
-  justify-content: space-between
+button{
+  background-color: white;  
 }
 
 .back{
-  display: block;
-  margin: 0 auto;
-  background-color: #e7e7e7;
+  margin-top: 10px;
+}
+
+#instMenu{
+  color: white;
+}
+
+
+
+p{
+  font-size: 25px;
+}
+
+#para{
+  font-size: 30px;
+}
+
+.box{
+  background-color: rgba(138, 167, 174, 0.5);
+  padding: 15px;
+  border-radius: 5px;
+  text-shadow: 3px 3px black;
+  outline: solid 3px black;
+  text-align: center;
 }
