--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,6 @@ button{
   color: white;
 }
 
-
-
 p{
   font-size: 25px;
 }
@@ -42,8 +40,81 @@ p{
 .box{
   background-color: rgba(138, 167, 174, 0.5);
   padding: 15px;
-  border-radius: 5px;
+  border-radius: 10px;
   text-shadow: 3px 3px black;
   outline: solid 3px black;
   text-align: center;
+  max-width: 900px;
+}
+
+.background{
+  background-image: url("https://i.imgur.com/wd6UCge.png");
+  background-size: cover;
+  height: 670px;
+  width: 1300px;
+  display: flex;
+  flex-wrap: nowrap;
+  position: relative;
+  top: 15px;
+}
+
+
+
+.s1, .s2, .s3{
+  width: 300px;
+  height: 300px;
+  max-width: 300px;
+  max-height: 300px;
+  border: 1.5px solid black; 
+  text-align: center;
+  font-size: 30px;
+  border-radius: 30px;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header{
+  color: white;
+  text-shadow: 2px 2px black;
+}
+
+.back2{
+  padding: 0;
+}
+.winnings{
+  color: gold;
+  font-size: 70px;
+  font-family: 'Abril Fatface', cursive;
+  margin-top: -25px;
+  margin-left: 150px;
+}
+
+.betM{
+  margin-left: 400px;
+}
+
+.betC{
+  color: #008E00;
+  font-size: 43px;
+  margin-left: -40px;
+}
+
+.cash,.betM{
+  font-size: 40px;
+}
+
+#coinSlot, #handle{
+  position: absolute;
+}
+
+s1{
+
+}
+s2{
+
+}
+s3{
+  
 }
