--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body{
 
 h1{
   font-family: 'Monoton', cursive;
-  color: #F2FF00;
+  color: gold;
   text-shadow: 2px 2px #000000; 
 }
 
@@ -27,6 +27,7 @@ button{
 
 #instMenu{
   color: white;
+  padding-top: 80px;
 }
 
 p{
@@ -48,7 +49,7 @@ p{
 }
 
 .background{
-  background-image: url("https://i.imgur.com/wd6UCge.png");
+  background-image: url("https://i.imgur.com/qMqbiSF.png");
   background-size: cover;
   height: 670px;
   width: 1450px;
@@ -86,23 +87,31 @@ p{
 }
 .winnings{
   color: gold;
-  font-size: 70px;
+  font-size: 75px;
   font-family: 'Abril Fatface', cursive;
-  margin-top: -25px;
-  margin-left: 150px;
+  margin-top: -15px;
 }
 
+.screen{
+  background-color: rgba(0, 72, 0);
+  position: absolute;
+  outline: solid black 1px;
+  width: 200px;
+  height: 100px;
+  left: 265px;
+  top: 30px;
+}
 .betM{
-  margin-left: 400px;
+  color: white;
+  text-shadow: 2px 2px black;
 }
 
 .betC{
-  color: #008E00;
-  font-size: 43px;
-  margin-left: -40px;
+  color: white;
+  text-shadow: 2px 2px black;
 }
 
-.cash,.betM{
+.cash, .betM{
   font-size: 40px;
 }
 
@@ -111,55 +120,80 @@ p{
 }
 
 #coinSlot{
-  top: -15px;
+  top: 16px;
+  right: 320px;
+  max-height: 10px;
 }
 
 #handle{
-  top: -15px;
-  left: 50px;
+  top: 10px;
+  right: 620px;
 }
 
 .s1{
   position: absolute;
   left: 230px;
-  top: 185px;
+  top: 170px;
 }
 .s2{
   position: absolute;
   left: 555px;
-  top: 185px;
+  top: 170px;
 }
 .s3{
   position: absolute;
   left: 880px;
-  top: 185px;
+  top: 170px;
 }
 /* #main{
   width: 80%;
   margin: auto auto;
 } */
+.bet1{
+  background-color: white;
+  position: absolute;
+  top: 540px;
+  left: 350px;
+}
 
 .bet25{
   background-color: red;
+  position: absolute;
+  top: 540px;
+  left: 550px;
 }
 
 .bet100{
   background-color: blue;
+  position: absolute;
+  top: 540px;
+  left: 750px;
 }
 
 .bet1000{
   background-color: green;
-  text-align: left;
+  position: absolute;
+  top: 540px;
+  left: 950px;
+  padding-right: 50px;
 }
 
 .bet1, .bet25, .bet100, .bet1000{
   color:black;
-  border-radius: 100%;
+  border-radius: 5px;
   border: solid black 2px;
   height: 120px;
-  width: 120px;
+  width: 150px;
   font-family: 'PT Sans Narrow', sans-serif;
-  font-size: 20px;
+  font-size: 23px;
   text-align: center;
+  box-shadow: 3px 3px black;
 }
 
+.title{
+  font-size: 130px;
+  text-align: center;
+  padding-top: 90px;
+  text-shadow: 6px 6px black;
+  font: outline;
+}
